# bin-picking

./: .gitignore  modbus_test.py  requirements.txt
Setting_scanner/: Setting.ini  SystemSetting.ini
Setting_scanner/Input/TabCamPar/: Aruco3DMarkers - Copy.txt  Aruco3DMarkers.csv  RotAngle.txt  SaveData.csv  SaveData.txt  TabCamPar - Copy.txt  TabCamPar.txt  TabCamPar_.txt  TabCamPar_20210520.txt  TabCamPar_20210521_workingwell.txt  TabCamPar_20210522_workingwell.txt  TabCamPar_20210525_bck_working.txt  TabCamPar_best.txt  __TabCamPar.txt
Setting_scanner/Input/new calib/: Error.txt
Setting_scanner/Input/parameter (copy)/: Error.txt
Setting_scanner/License/: license_FlexM1.lic  license_FlexScan_8mm_KidsCode.lic
scanner/: CMakeLists.txt  ReadMe.md  howtorun  package.xml
scanner/include/: sl_3D_scanner_api.h
scanner/libs/: Robot.pyi
scanner/output_data/: pointcloud.ply  uv_cam1.txt
scanner/src/: main.cpp  main_copy.cpp  scanner_node.cpp
src/indy_app/: package.xml  setup.cfg  setup.py
src/indy_app/indy_app/: robot_manager_node.py  viz_avoidance.py
src/indy_app/launch/: manager.launch.py
src/indy_app/test/: robot.py  test_robot.py
src/indy_description/rviz_config/: indy.rviz
src/indy_driver/indy_driver/: indy_driver.py
src/indy_moveit/launch/: moveit.launch.py
src/indy_moveit/moveit_config/: kinematics.yaml  sensors_3d.yaml
src/indy_moveit/rviz_config/: indy_moveit.rviz
src/indy_vision/: package.xml  setup.cfg  setup.py
src/indy_vision/data_calib_intel/: camera_intrinsics.json  eye_in_hand_result.json
src/indy_vision/indy_vision/: calibration_broadcaster.py  calibration_broadcaster_forMovelt.py  calibration_broadcaster_oldversion.py  vision_node.py
src/indy_vision/launch/: vision.launch.py
src/indy_vision/test/: calibration_node.py  (+2 more)
(+88 files in other folders)
